--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "*",
     "@testing-library/react": "*",
     "@testing-library/user-event": "*",
-    "axios": "*",
+    "axios": "^1.6.8",
     "concurrently": "*",
     "json-server": "*",
     "react": "*",
